--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,8 @@
     <groupId>com.khabaj</groupId>
     <artifactId>JavaRestFrameworks</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <modules>
-    </modules>
     <packaging>pom</packaging>
-
-
+    <modules>
+        <module>springboot</module>
+    </modules>
 </project>
