--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,6 @@
         <module>common</module>
         <module>dropwizard</module>
         <module>restlet</module>
+        <module>spark</module>
     </modules>
 </project>
