--- a/dropwizard/config.yml
+++ b/dropwizard/config.yml
@@ -1,8 +1,8 @@
 logging:
-  level: INFO
+  level: ERROR
   loggers:
-    com.khabaj: DEBUG
+    com.khabaj: ERROR
 server:
   applicationConnectors:
     - type: http
-      port: 8082
+      port: 8090
